# cozip

./: Cargo.toml  README.ja.md  README.md
docs/: README.md  context-log.md  pdeflate-gpu-async-batch-pipeline-design.md  pdeflate-gpu-decompress-design.md  pdeflate-v0-baseline.md  pdeflate-v0-spec.md
docs/tasks/: README.md  pdeflate-gpu-decompress-rebuild-tasks.md  pdeflate-v0-huffman-lut-tasks.md
src/cozip/: Cargo.toml
src/cozip-pdeflate_old/src/: lib.rs
src/cozip/src/: lib.rs
src/cozip_deflate/src/: lib.rs
src/cozip_desktop/: Cargo.toml
src/cozip_desktop/locales/: en_US.toml  ja_JP.toml
src/cozip_desktop/src/: app.rs  jobs.rs  launch.rs  main.rs
src/cozip_pdeflate/: Cargo.toml
src/cozip_pdeflate/examples/: bench_pdeflate.rs
src/cozip_pdeflate/src/: gpu.rs  lib.rs  tests.rs
src/cozip_pdeflate/src/legacy_pdeflate_cpu/: gpu.rs  mod.rs
src/cozip_pdeflate/src/pdeflate/: mod.rs  stream.rs
src/cozip_util/: Cargo.toml
src/cozip_util/src/: error.rs  file_reader.rs  file_writer.rs  lib.rs  options.rs
src/cozip_util/src/backends/: fallback.rs  linux.rs  mod.rs  windows.rs
src/cozip_win_installer/: Cargo.toml  build.rs  installer.rc
src/cozip_win_installer/locales/: en_US.toml  ja_JP.toml
src/cozip_win_installer/src/: i18n.rs  main.rs
