[package]
name = "cozip"
version.workspace = true
edition.workspace = true

[dependencies]
cozip_deflate = { path = "../cozip_deflate" }
cozip_pdeflate = { path = "../cozip_pdeflate" }
cozip_util = { path = "../cozip_util" }
crc32fast = "=1.5.0"
tokio = { version = "=1.48.0", features = ["fs", "rt"] }
thiserror.workspace = true
