[package]
name = "cozip_pdeflate"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = "=1.24.0"
cozip_util = { path = "../cozip_util" }
crc32fast = "=1.5.0"
flate2 = { version = "=1.1.8", default-features = false, features = ["zlib-rs"] }
pollster = "=0.3.0"
thiserror.workspace = true
tokio = { version = "=1.48.0", features = ["fs", "io-util", "rt"] }
wgpu = "=0.19.4"
