[package]
name = "cozip_util"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "=0.7.10"
