[package]
name = "cozip_win_installer"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
gpui = "0.2.2"
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Globalization"] }

[build-dependencies]
embed-resource = "3.0.6"
