[package]
name = "cozip_win_installer"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
gpui = "0.2.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Globalization", "Win32_Security", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
embed-resource = "3.0.6"
